batman-adv-kernelland (0.1-6) unstable; urgency=low

  * UNRELEASED
  * Move to new section kernel
  * Upgraded to policy 3.8.1, no changes required
  * debian/control: Move Vcs-* to git.debian.org

 -- Sven Eckelmann <sven.eckelmann@gmx.de>  Mon, 16 Mar 2009 21:33:37 +0100

batman-adv-kernelland (0.1-5) unstable; urgency=low

  * Correct variable to specify path to kernel headers

 -- Sven Eckelmann <sven.eckelmann@gmx.de>  Mon, 09 Feb 2009 13:25:06 +0100

batman-adv-kernelland (0.1-4) unstable; urgency=low

  * Correct URL in watch file to match newer releases

 -- Sven Eckelmann <sven.eckelmann@gmx.de>  Tue, 20 Jan 2009 00:51:45 +0100

batman-adv-kernelland (0.1-3) unstable; urgency=low

  * Correct plural in debian/README.Debian
  * Recommend batman-adv-battool
  * Depend on dephelper 7 in generated source packages

 -- Sven Eckelmann <sven.eckelmann@gmx.de>  Sun, 11 Jan 2009 14:04:18 +0100

batman-adv-kernelland (0.1-2) unstable; urgency=low

  * Split batman-adv source package in batman-adv-kernelland and battool
    to match with upstream released tar.gz
  * Install README with usage instructions
  * Make bzip2 an arch independent dependency for module source creation
  * Remove toplevel stamps with dh_clean (>=7)
  * Change upstream url to http://www.open-mesh.net/
  * Replace dh_clean -k with dh_prep in debian/rules

 -- Sven Eckelmann <sven.eckelmann@gmx.de>  Fri, 02 Jan 2009 14:20:44 +0100

batman-adv (0.1-1) unstable; urgency=low

  * New upstream release
  * Install upstream changelog for batman-adv-source

 -- Sven Eckelmann <sven.eckelmann@gmx.de>  Sun, 28 Dec 2008 12:37:37 +0100

batman-adv (0.1~beta+svn1154-1) unstable; urgency=low

  * Support changed directory layout in upstream
  * Correct name of battool package in debian/Readme.DEBIAN
  * Fix installation of the renamed kernel module
  * Replace batman-adv@packages.debian.org maintainer with first Uploader in
    debian/control
