@@ -15,6 +15,7 @@
 # Uncomment this to turn on verbose mode. 
 #export DH_VERBOSE=1
 
+include /usr/share/quilt/quilt.make
 
 # some default definitions, important!
 # 
@@ -98,9 +99,9 @@ binary-modules: binary-modules-stamp
 	#$(MAKE)
 
 
-build:
+build: $(QUILT_STAMPFN)
 
-clean:
+clean: unpatch
 	dh_testdir
 	dh_testroot
 
