@@ -4,6 +4,7 @@ batman-adv-kernelland (0.1-6) unstable; urgency=low
   * Move to new section kernel
   * Upgraded to policy 3.8.1, no changes required
   * debian/control: Move Vcs-* to git.debian.org
+  * Add quilt as patch system to debian/rules
 
  -- Sven Eckelmann <sven.eckelmann@gmx.de>  Mon, 16 Mar 2009 21:33:37 +0100
 
